@@ -1,3 +1,6 @@
+2011-09-28 yusei
+* Improve Base_getBySiteCurrentStockList and support group category.
+
 2011-09-20 tatuya
 * Modify Order_zSelectMovement  to make Packing List enable to represent Transfer of rights(ownership). To do this, remove WHERE expression to exclude simulation movements that have same source and destination.
 
